--- a/app/globals.css
+++ b/app/globals.css
@@ -6,10 +6,13 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 255, 248, 240;
   --background-end-rgb: 255, 255, 255;
+  --background: 255, 0, 0
 }
 
 body {
   color: rgb(var(--foreground-rgb));
+  width: 100vw;
+  height: 100vh;
   background: linear-gradient(
       to bottom,
       transparent,
@@ -17,3 +20,11 @@ body {
     )
     rgb(var(--background-start-rgb));
 } 
+
+.draggable {
+  user-select: none;
+  padding: 16px;
+  margin: 0 0 8px 0;
+  background-color: white;
+  border: 1px solid lightgray;
+}
