--- a/app/globals.css
+++ b/app/globals.css
@@ -28,3 +28,12 @@ body {
   background-color: white;
   border: 1px solid lightgray;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none; /* Hide scrollbar for Chrome, Safari, Edge */
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none; /* Hide scrollbar for IE and Edge */
+  scrollbar-width: none; /* Hide scrollbar for Firefox */
+}
